force-app/main/default/objects/tc9_bgl__Acc_Invoice_Type__c/tc9_bgl__Acc_Invoice_Type__c.object-meta.xml
<CustomObject>
    <description>Object that holds user definable Invoice types</description>
    <label>Accounting Invoice Type</label>
    <nameField>
        <label>Invoice Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Invoice Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>