force-app/main/default/objects/tc9_bgl__Acc_Invoice_Type__c/fields/tc9_bgl__Accounting_System__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Accounting_System__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Accounting System</label>
    <referenceTo>tc9_bgl__Acc_System_Setup__c</referenceTo>
    <relationshipLabel>Accounting Invoice Type</relationshipLabel>
    <relationshipName>Accounting_Invoice_Type</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>