force-app/main/default/objects/tc9_bgl__Acc_Invoice_Type__c/fields/tc9_bgl__GL_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__GL_Revenue_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field allows you to select a GL Natural account that you can use when sending data across to your accounting system</description>
    <inlineHelpText>This field allows you to select a GL Natural account that you can use when sending data across to your accounting system</inlineHelpText>
    <label>GL Revenue Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a valid natural account number</errorMessage>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Natural Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Accounting Invoice Type</relationshipLabel>
    <relationshipName>Accounting_Invoice_Type</relationshipName>
    <type>Lookup</type>
</CustomField>