force-app/main/default/objects/tc9_bgl__Acc_Invoice_Type__c/fields/tc9_bgl__Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Invoice_Item__c</fullName>
    <label>Invoice Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowance</fullName>
            </value>
            <value>
                <fullName>Client Paid Expense</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Payroll Services Fee</fullName>
            </value>
            <value>
                <fullName>Perm Fee</fullName>
            </value>
            <value>
                <fullName>Project Services Fee</fullName>
            </value>
            <value>
                <fullName>Retainer Fee</fullName>
            </value>
            <value>
                <fullName>Temp To Perm Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>