force-app/main/default/objects/tc9_bgl__Acc_Invoice_Type__c/listViews/tc9_bgl__All.listView-meta.xml
<ListView>
    <fullName>tc9_bgl__All</fullName>
    <columns>tc9_bgl__Accounting_System__c</columns>
    <columns>NAME</columns>
    <columns>tc9_bgl__Invoice_Item__c</columns>
    <columns>tc9_bgl__GL_Revenue_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>